--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.5",
     "immer": "^10.0.3",
     "react": "^18.2.0",
